--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dependencies": {
         "@emotion/react": "^11.14.0",
         "@emotion/styled": "^11.14.1",
+        "@mui/icons-material": "^7.3.1",
         "@mui/material": "^7.2.0",
         "@reduxjs/toolkit": "^2.8.2",
         "formik": "^2.4.6",
@@ -21,6 +22,7 @@
         "react-dom": "^18",
         "react-hot-toast": "^2.5.2",
         "react-icons": "^5.5.0",
+        "react-pro-sidebar": "^0.7.1",
         "react-redux": "^9.2.0",
         "sharp": "^0.34.3",
         "yup": "^1.7.0"
