--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "@mui/icons-material": "^7.3.1",
         "@mui/material": "^7.2.0",
         "@reduxjs/toolkit": "^2.8.2",
+        "axios": "^1.11.0",
         "formik": "^2.4.6",
         "next": "14.2.31",
         "next-auth": "^4.24.11",
