--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
         "@emotion/react": "^11.14.0",
         "@emotion/styled": "^11.14.1",
         "@mui/icons-material": "^7.3.1",
-        "@mui/material": "^7.2.0",
+        "@mui/material": "^7.3.1",
+        "@mui/x-data-grid": "^8.10.0",
         "@reduxjs/toolkit": "^2.8.2",
         "axios": "^1.11.0",
         "formik": "^2.4.6",
@@ -26,6 +27,7 @@
         "react-pro-sidebar": "^0.7.1",
         "react-redux": "^9.2.0",
         "sharp": "^0.34.3",
+        "timeago.js": "^4.0.2",
         "yup": "^1.7.0"
     },
     "devDependencies": {
